--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -2,5 +2,15 @@ body {
     background-image: url('../assets/background.jpg');
     background-repeat: no-repeat;
     background-position: fixed;
+    background-attachment: fixed;
     background-size: cover;
+}
+
+header {
+    background-color: white;
+
+}
+
+footer {
+    background-color: white;
 }
