--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -7,22 +7,23 @@
 
 html {
     height: 100%;
-    overflow-y: scroll;
+    /* overflow-y: scroll; */
   }
 
 body {
     background-image: url('../assets/background.jpg');
     background-repeat: no-repeat;
-    background-position: fixed;
     background-attachment: fixed;
     background-size: cover;
     margin: 0;
+    height: 100vh;
 }
 
 header,
 footer {
     background-color: black;
     text-align: center;
+    width: 100%;
 }
 
 
@@ -30,16 +31,34 @@ header {
     background: rgba(0, 0, 0, 0.4);
 }
 
+img {
+    height: 15em;
+    border-radius: 100%;
+    border: 1px solid white;
+    margin: 0.5em;
+}
+
 .contact {
     width: 55%;
     text-align: center;
-    padding: 0.5em;
-    margin: 1em auto;
-    background: rgba(0, 0, 0, 0.7);
+    padding: 2em;
+    margin: 2em auto;
+    background: rgba(0, 0, 0, 0.8);
     font-family: 'Quicksand', sans-serif;
     font-size: 20px;
+    user-select: none;
+    border: 1px solid rgb(31, 31, 31);
+    border-radius: 5px;
 }
 
+#content {
+    margin: 0;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
 
 p {
     color: white;
@@ -89,28 +108,23 @@ footer {
     position: relative;
     font-family: 'Quicksand', sans-serif;
     gap: 0.5rem;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    top: auto; 
-    margin-top: 1em;
     text-align: center;
     padding: 0;
     background: rgba(0, 0, 0, 0.8);
+    user-select: none;
+    font-size: 1.2rem;
+    letter-spacing: .1rem;
+    height: 6%;
 }
 
 i {
-    font-size: 1rem;
     color: white;
+    font-size: 1.2rem;
 }
 
 i:hover {
     opacity: 0.7;
 }
-
-/* .active {
-    color: red;
-} */
 
 /* Media queries */
 
@@ -123,4 +137,21 @@ i:hover {
   }
   
   @media (max-width: 500px) {
+  }
+
+  /* Scrollbar */
+  ::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  ::-webkit-scrollbar-track {
+    background: #a5a4a4; 
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background: #222222; 
+  }
+  
+  ::-webkit-scrollbar-thumb:hover {
+    background: #2c2c2c; 
   }
